# yzbot

./: cube_control.sh  my_send_goal.sh  my_send_goal0.sh  pick_off.sh  pick_on.sh  readme.md  send_goal_pick.sh
bot_navigation/: CMakeLists.txt  package.xml
bot_navigation/launch/: cartographer_gazebo.launch.py  nav2_carto.py  nav_bringup_gazebo.launch.py
bot_navigation/param/: originbot_nav2.yaml
bot_navigation/rviz/: nav2_default_view.rviz
mybot/: .setup_assistant  CMakeLists.txt  auto_grasp_moveit.py  package.xml
mybot/config/: ekf.yaml  moveit.rviz  six_arm.ros2_control.xacro  six_arm.srdf  six_arm.urdf.xacro
mybot/launch/: demo.launch.py  gazebo.launch.py  gazebo_world.launch.py  move_group.launch.py  moveit_rviz.launch.py  my_moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
mybot_description/: package.xml  setup.py
mybot_description/urdf/: arm.xacro  arm_gazebo.xacro  camera_gazebo.xacro  imu_gazebo.xacro  large_base.xacro  large_base_gazebo.xacro  lidar_gazebo.xacro  originbot_with_arm.xacro  originbot_with_arm_gazebo.xacro  originbot_with_rgbd_gazebo_arm.xacro  rgbd_gazebo.xacro
mybot_description/worlds/: box.world  competition_env.world  env_competition.world  room.world
mybotp/: CMakeLists.txt  package.xml
mybotp/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  (+2 more)
tools_demo/: package.xml  readme.txt  setup.cfg  setup.py
tools_demo/tools_demo/: chat_interactive.py  chat_interactive_ros.py
(+11 files in other folders)
